--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "type": "module",
   "devDependencies": {
     "@faker-js/faker": "^9.8.0",
+    "@wdio/allure-reporter": "^9.14.0",
     "@wdio/cli": "^9.13.0",
     "@wdio/json-reporter": "^9.13.0",
     "@wdio/local-runner": "^9.13.0",
@@ -14,7 +15,8 @@
     "test:all": "wdio run ./wdio.conf.ts",
     "test:login": "wdio run ./wdio.conf.ts --spec ./test/specs/Login/login.e2e.ts",
     "test:product": "wdio run ./wdio.conf.ts --spec ./test/specs/Product/product.e2e.ts",
-    "test:users": "wdio run ./wdio.conf.ts --spec ./test/specs/Users/users.e2e.ts"
+    "test:users": "wdio run ./wdio.conf.ts --spec ./test/specs/Users/users.e2e.ts",
+    "allure:report": "allure generate test/reports/allure-results"
   },
   "dependencies": {
     "geckodriver": "^5.0.0"
