--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:login": "wdio run ./wdio.conf.ts --spec ./test/specs/Login/login.e2e.ts",
     "test:product": "wdio run ./wdio.conf.ts --spec ./test/specs/Product/product.e2e.ts",
     "test:users": "wdio run ./wdio.conf.ts --spec ./test/specs/Users/users.e2e.ts",
-    "allure:report": "allure generate test/reports/allure-results"
+    "allure:report": "allure generate test/reports/allure-results --clean -o test/reports/generateReport "
   },
   "dependencies": {
     "geckodriver": "^5.0.0"
