--- a/.github/workflows/runTest.yml
+++ b/.github/workflows/runTest.yml
@@ -34,6 +34,9 @@ jobs:
         - name: Install Dependencies
           run: npm install
 
+        - name: Install Allure Command-line Tool
+          run: npm install -g allure-commandline
+
         - name: 🧪 Test
           run: npm run test:${{ github.event.inputs.testSuite }}
           env:
