🔧 Chore: Ajuste no upload do report

--- a/.github/workflows/runTest.yml
+++ b/.github/workflows/runTest.yml
@@ -47,7 +47,7 @@ jobs:
           
         - name: Upload reports
           uses: actions/upload-artifact@v4
-          if: failure()
+          if: always()
           with:
             name: reports - ${{ github.event.inputs.testSuite }} - ${{ github.event.inputs.environment }}
             path: test/reposts/generateReport
